# babbling-baby

./: .gitignore  README.md  babbling-baby.draft.md  pyproject.toml
scripts/: bench_batch.py  bench_parallel.py  plot_journey.py  plot_trace.py  run_training.py
src/babbling_baby/: curriculum.py  pupil.py  teacher.py  trace.py  train.py  verifier.py
tests/: test_acceptance.py  test_curriculum.py  test_pupil.py  test_teacher.py  test_trace.py  test_train.py  test_verifier.py
