[project]
name = "babbling-baby"
version = "0.0.1"
description = "Tabula-rasa byte-level transformer learning to babble by playing a word-emission game against Claude with a dictionary verifier."
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.20",
    "anthropic>=0.40",
    "pyspellchecker>=0.8",
    "matplotlib>=3.8",
    "wordfreq>=3.1.1",
    "nltk>=3.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/babbling_baby"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
